--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: yellow;">
     <header>
         <div>
             <a href="./index.html">
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">home</a></li>
+                <li><a style="background-color: rgb(171, 210, 30);" href="./index.html">home</a></li>
                 <li><a href="./pages/about..html">about</a></li>
                 <li><a href="./pages/contact.html">contact</a></li>
             </ul>
@@ -24,3 +24,8 @@
         <h1>loading page</h1>
     </main>
     <footer></footer>
+
+
+
+
+
