webday4 cd ¬ git commit -m webday4

--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@
     <title>Document</title>
 </head>
 <body style="background-color: yellow;">
-    <header>
+    <header style="display: flex; align-items: center;">
         <div>
             <a href="./index.html">
                 <img src="./images/Imagepg.jpg" alt="logo" width="70x">
             </a>
         </div>
         <nav>
-            <ul>
-                <li><a style="background-color: rgb(171, 210, 30);" href="./index.html">home</a></li>
-                <li><a href="./pages/about..html">about</a></li>
-                <li><a href="./pages/contact.html">contact</a></li>
+            <ul style="list-style: none; display: flex ;">
+                <li style="margin-right: 40px;"><a href="./index.html" style="background-color: red;">home</a></li>
+                <li style="margin-right: 40px;"><a href="./pages/about..html" style="background-color: red;">about</a></li>
+                <li style="margin-right: 40px;"><a href="./pages/contact.html" style="background-color: red;">contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>loading page</h1>
+        <h1 style="text-align: center;">loading page</h1>
     </main>
     <footer></footer>
 
-
+ 
 
 
 
