--- a/pages/about..html
+++ b/pages/about..html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="../index.html">home</a></li>
-                <li><a href="./about..html">about</a></li>
-                <li><a href="contact.html">contact</a></li>
+                <li><a href="../index.html" style="background-color: red; text-decoration: none;">home</a></li>
+                <li><a href="./about..html" style="background-color: red; text-decoration: none;">about</a></li>
+                <li><a href="contact.html" style="background-color: red; text-decoration: none;">contact</a></li>
             </ul>
         </nav>
     </header>
