--- a/pages/about..html
+++ b/pages/about..html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
+    <style>
+        body {background-color: skyblue;}
+        h1 {
+            color:red;
+            font-size: 73px;
+        }
+    </style>
 </head>
 <body>
     <header>
