--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
         <nav>
             <ul style="list-style: none; display: flex ;">
-                <li style="margin-right: 40px;"><a href="./index.html" style="background-color: red;">home</a></li>
-                <li style="margin-right: 40px;"><a href="./pages/about..html" style="background-color: red;">about</a></li>
-                <li style="margin-right: 40px;"><a href="./pages/contact.html" style="background-color: red;">contact</a></li>
+                <li style="margin-right: 40px;"><a href="./index.html" style="background-color: red; text-decoration: none;">home</a></li>
+                <li style="margin-right: 40px;"><a href="./pages/about..html" style="background-color: red; text-decoration: none;">about</a></li>
+                <li style="margin-right: 40px;"><a href="./pages/contact.html" style="background-color: red; text-decoration: none;">contact</a></li>
             </ul>
         </nav>
     </header>
@@ -24,8 +24,5 @@
         <h1 style="text-align: center;">loading page</h1>
     </main>
     <footer></footer>
-
- 
-
-
-
+</body>
+</html>
