--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -26,3 +26,16 @@
     </main>
     <footer></footer>
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
