--- a/pages/about.html
+++ b/pages/about.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <style>
+        body {
+            background-color: skyblue;
+        }
+        h1 {
+            color: red;
+            font-size: 72px;
+        }
+    </style>
 </head>
 <body>
-    <header>
+       <header>
         <div>
-            <a href=".index.html">
-                
+             <a href="../index.html">
+                <img src="../Images/logo.jpg" alt="logo" width="60px">
             </a>
         </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">home</a></li>
+                <li><a href="./about.html">about</a></li>
+                <li><a href="./contact.html">contact</a></li>
+            </ul>
+        </nav>
     </header>
-    
+    <main>
+        <h1>About Page</h1>
+    </main>
+    <footer></footer>
 </body>
 </html>
