--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,28 +6,29 @@
     <title>Contact</title>
 </head>
 <body>
-    <header>
+       <header 
+       ul {
+        style="display: flex; align-items: center;"
+       }>
         <div>
-            <a href="./index.html">
-                <img src="../images/Imagepg.jpg" alt="logo" width="70x">
-            
+             <a href="../index.html">
+                <img src="../Images/logo.jpg" alt="logo" width="60px">
             </a>
         </div>
         <nav>
-            <ul>
-                <li><a href="../index.html" style="background-color: red; text-decoration: none;">home</a></li>
-                <li><a href="./about..html" style="background-color: red; text-decoration: none;">about</a></li>
-                <li><a href="./contact.html" style="background-color: red; text-decoration: none;">contact</a></li>
+            <ul style="list-style: none; display: flex;">
+                <li><a href="../index.html">home</a></li>
+                <li><a href="./about.html">about</a></li>
+                <li><a href="./contact.html">contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>contact page</h1>
+        <h1>Contact page</h1>
     </main>
     <footer></footer>
 </body>
-
-
+</html>
 
 
 
