--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body style="background-color: yellow;">
     <header style="display: flex; align-items: center;">
         <div>
             <a href="./index.html">
-                <img src="./images/Imagepg.jpg" alt="logo" width="70x">
+                <img src="./Images/Imagepg.jpg" alt="logo" width="60px">
             </a>
         </div>
         <nav>
-            <ul style="list-style: none; display: flex ;">
-                <li style="margin-right: 40px;"><a href="./index.html" style="background-color: red; text-decoration: none;">home</a></li>
-                <li style="margin-right: 40px;"><a href="./pages/about..html" style="background-color: red; text-decoration: none;">about</a></li>
-                <li style="margin-right: 40px;"><a href="./pages/contact.html" style="background-color: red; text-decoration: none;">contact</a></li>
+            <ul style="list-style: none; display: flex;">
+                <li style="margin-right: 40px;"><a href="./index.html" style="color: black;text-decoration: none;">home</a></li>
+                <li style="margin-right: 40px;"><a href="./Pages/about.html" style="color: black;text-decoration: none">about</a></li>
+                <li style="margin-right: 40px;"><a href="./Pages/contact.html" style="color: black;text-decoration: none;">contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1 style="text-align: center;">loading page</h1>
+        <h1 style="color: navy; text-align: center;">Landing Page</h1>
     </main>
     <footer></footer>
 </body>
